--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "league/flysystem-aws-s3-v3": "~1.0",
-        "league/flysystem-cached-adapter": "~1.0"
+        "league/flysystem-cached-adapter": "~1.0",
+        "stripe/stripe-php": "^7.58"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
