--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2.5",
         "aws/aws-sdk-php": "~3.0",
+        "doctrine/dbal": "^2.0",
         "easypost/easypost-php": "^3.4",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
