--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,27 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Listen for XDebug",
-            "type": "php",
-            "request": "launch",
-            "port": 9000
-        },
-        {
-            "name": "Launch currently open script",
-            "type": "php",
-            "request": "launch",
-            "program": "${file}",
-            "cwd": "${fileDirname}",
-            "port": 9000
-        },
-        {
             "name": "Listen for XDebug on Homestead",
             "type": "php",
             "request": "launch",
             "pathMappings": {
-                "/home/vagrant/code/biyoristoreexperiment": "/Users/ops/Desktop/vagrant-projects/code/biyoristoreexperiment"
+                "/home/vagrant/code/biyoristoreexperiment": "${workspaceFolder}"
             },
-            "port": 9000
+            "port": 9003
         }
     ]
 }
